fixed alignment! also got links in the images. also got the whole ass lightbox to work on all the images i have in her so far. woot woot hell yuh.

--- a/illustration/style.css
+++ b/illustration/style.css
@@ -1,10 +1,21 @@
+body {
+
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 50%;
+    display: flex;
+    /* align-items: center; */
+    height: 100vh;
+    color: #333333;
+    flex-wrap: wrap;
+}
+
 .left {
     display: flex;
     position: relative;
     flex-direction: column;
     align-self: flex-start;
     color: #333333;
-    font-family:Arial, Helvetica, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     width: 10%;
     height: 200vh;
     background-color: white;
@@ -12,16 +23,17 @@
     line-height: 40px;
     max-width: 200px;
 
-    flex:1%;
+    flex: 1%;
 }
 
 .side-link1 {
-    color:#333333;
+    color: #333333;
 }
 
 .side-link1:hover {
     color: #bcb72a;
 }
+
 .side-link2 {
     color: #333333;
 }
@@ -29,36 +41,41 @@
 .side-link2:hover {
     color: #e34a4a;
 }
+
 .side-link3 {
-    color:#333333
+    color: #333333
 }
 
 .side-link3:hover {
     color: #c1aadf;
 }
+
 .side-link4 {
-    color:#333333;
+    color: #333333;
 }
 
 .side-link4:hover {
     color: #ffb2c2;
 }
+
 .side-link5 {
-    color:#333333;
+    color: #333333;
 }
 
 .side-link5:hover {
     color: #c1aadf;
 }
+
 .side-link6 {
-    color:#333333;
+    color: #333333;
 }
 
 .side-link6:hover {
     color: #bcb72a;
 }
+
 .side-link7 {
-    color:#333333;
+    color: #333333;
 }
 
 .side-link7:hover {
@@ -68,21 +85,11 @@
 
 .copyright {
     font-size: 8px;
-    position:fixed;
+    position: fixed;
     bottom: 10px;
-    color:#333333;
-}
-
-body {
-
-    font-family:Arial, Helvetica, sans-serif;
-    font-weight: 50%;
-    display: flex;
-    align-items: center;
-    height: 100vh;
     color: #333333;
-    flex-wrap: wrap;
 }
+
 
 #right {
     flex-wrap: wrap;
@@ -93,125 +100,132 @@ header {
     display: flex;
     max-width: 900px;
     padding-left: 200px;
+    padding-bottom: 50px;
+    padding-top: 100px;
 }
 
-    .title {
+.title {
     color: grey;
-    }
+}
 
-    #bio {
-        line-height: 20px;
-    }
+#bio {
+    line-height: 20px;
+}
 
-    #profile-pic {
-        border-radius: 50%;
-        padding: 50px 60px;
-        width: 120px;
-        padding-top: 40px;
-    }
+#profile-pic {
+    border-radius: 50%;
+    padding: 50px 60px;
+    width: 120px;
+    padding-top: 40px;
+}
 
-    .link {
-        color: #135A90;
-        font-size: 13px;
-        padding-top: 0%;
-    }
+.link {
+    color: #135A90;
+    font-size: 13px;
+    padding-top: 0%;
+}
 
-    .link:hover {
-        color: pink;
-    }
+.link:hover {
+    color: pink;
+}
 
-    .numbers {
-        padding-top: 10px;
-        padding-bottom: 20px;
-    }
+.numbers {
+    padding-top: 10px;
+    padding-bottom: 20px;
+}
 
-    .words {
-        font-size: 12px;
-        size: auto;
-        max-width: 30vw;
-    }
+.words {
+    font-size: 12px;
+    size: auto;
+    max-width: 20vw;
+    padding-bottom: 5px;
+}
 
 main {
-padding-left: 220px;
-flex:10%;
+    padding-left: 220px;
+    flex: 10%;
 }
 
-    .spotlight {
-    border-radius: 50%;
-    width:70px;
+.styles {
     display: flex;
-    padding-left: 100px;
-    }
+    padding-bottom: 50px;
+}
 
-    .emojis {
-        font-size: 20px;
-        padding: 0px 15px 40px;
-        word-spacing: 48px;
-        padding-left: 0px;
-    }
+.spotlight {
+    border-radius: 50%;
+    width: 70px;
+    padding-left: 50px;
+}
 
-    .nav-bar {
-        text-align: center;
-        font-size: 15px;
-        color: #333333;
-        accent-color: pink;
-        height: 6vh;
-    }
+.emojis {
+    font-size: 20px;
+    padding: 0px 15px 40px;
+    word-spacing: 48px;
+    padding-left: 0px;
+}
 
-    .spotlight > img {
-        border-radius: 50%;
-        width: 100%;
-        padding: 50px 15px 15px;
-        word-spacing: 75px;
-    }
+.nav-bar {
+    /* text-align: center; */
+    font-size: 15px;
+    color: #333333;
+    accent-color: pink;
+    height: 6vh;
+}
 
-    .gallery {
+.spotlight>img {
+    border-radius: 50%;
+    width: 100%;
+    padding: 0px 0px 15px;
+}
 
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
-        width: 100%;
-        max-width: 700px;
-        grid-gap: 20px;
-        /* border-bottom: 100px; */
-        }
+.gallery {
 
-    .gallery img {
-        width: 100%;
-    }
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    width: 100%;
+    max-width: 700px;
+    grid-gap: 20px;
+    /* border-bottom: 100px; */
+}
 
-    .hidden {
-        display: none;
-    }
+.gallery img {
+    width: 100%;
+}
 
-    footer {
-        font-size: 12px;
-        position:fixed;
-        bottom: 20px;
-        color:#333333;
-    }
-        .copyright {
-            font-size: 8px;
-            position:fixed;
-            bottom: 10px;
-            color:#333333;
-        }
-    
-        .help {
-            color: #333333;
-            font-size: 10px;
-            padding-top: 0%;
-            position:fixed;
-            bottom: 10px;
-            right: 20px;
-        }
+.hidden {
+    display: none;
+}
 
-        .gallery-container {
-            display: none;
-        }
+footer {
+    font-size: 12px;
+    position: fixed;
+    bottom: 20px;
+    color: #333333;
+}
 
-        .gallery-container:nth-child(1) {
-            display: block;
-        }
+.copyright {
+    font-size: 8px;
+    position: fixed;
+    bottom: 10px;
+    color: #333333;
+}
+
+.help {
+    color: #333333;
+    font-size: 10px;
+    padding-top: 0%;
+    position: fixed;
+    bottom: 10px;
+    right: 20px;
+}
+
+.gallery-container {
+    display: none;
+}
+
+.gallery-container:nth-child(1) {
+    display: block;
+}
 
 h1 {
     color: #333333;
@@ -219,16 +233,24 @@ h1 {
     font-weight: 5;
 }
 
-a:link { text-decoration: none; }
+a:link {
+    text-decoration: none;
+}
 
 
-a:visited { text-decoration: none; }
+a:visited {
+    text-decoration: none;
+}
 
 
-a:hover { text-decoration: none; }
+a:hover {
+    text-decoration: none;
+}
 
 
-a:active { text-decoration: none; }
+a:active {
+    text-decoration: none;
+}
 
 p {
     font-size: 13px;
